# ProteiFS

./: CMakeLists.txt
ProteiFS/: CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  FileBase.h  ProteiFS.cpp  ProteiFS.h  main.cpp
